fix email in slide teaser spill over issue. #7840

--- a/openscholar/modules/os_features/os_profiles/os_profiles.css
+++ b/openscholar/modules/os_features/os_profiles/os_profiles.css
@@ -7,6 +7,7 @@
   margin-right: 1em;
 }
 
+#content .node-person .os-slider .field-name-field-email,
 #content .node-person .field-name-field-phone.view-mode-slide_teaser {
   float: none;
 }
